@@ -420,11 +420,19 @@ static GdkPixbuf* _vfs_thumbnail_load( const char* file_path, const char* uri,
             mtime = statbuf.st_mtime;
     }
 
+    if ( file_is_video && time( NULL ) - mtime < 5 )
+        /* if mod time of video being thumbnailed is less than 5 sec ago,
+         * don't create a thumbnail (is copying?)
+         * FIXME: This means that a newly saved file may not show a thumbnail
+         * until refresh. */
+        return NULL;
+
     /* load existing thumbnail */
     thumbnail = gdk_pixbuf_new_from_file( thumbnail_file, NULL );
-    if ( !thumbnail || !( thumb_mtime = gdk_pixbuf_get_option( thumbnail,
+    if ( !thumbnail ||
+                !( thumb_mtime = gdk_pixbuf_get_option( thumbnail,
                                                 "tEXt::Thumb::MTime" ) ) ||
-            atol( thumb_mtime ) != mtime )
+                atol( thumb_mtime ) != mtime )
     {
         if( thumbnail )
             g_object_unref( thumbnail );
